--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第八章 进程之间通信.md
+++ b/linux kernal/Linux 内核设计艺术/第八章 进程之间通信.md
@@ -8,6 +8,9 @@
         - [2.1.3 创建管道文件i节点](#213-创建管道文件i节点)
         - [2.1.4 将i节点和file_table[64]建立联系](#214-将i节点和file_table64建立联系)
         - [2.1.5 将管道文件句柄返回给用户进程](#215-将管道文件句柄返回给用户进程)
+    - [2.2 管道操作](#22-管道操作)
+        - [2.2.1 读管道进程开始操作文件](#221-读管道进程开始操作文件)
+        - [2.2.2 写管道进程向管道中写数据](#222-写管道进程向管道中写数据)
 
 <!-- /TOC -->
 # 1. 背景
@@ -71,4 +74,32 @@
 
 ### 2.1.5 将管道文件句柄返回给用户进程
 现在将管道文件的两个句柄返回给用户进程（用户进程无法直接操作filp[20],因为实在内核区），即实例中的fd[2].
+![2019-09-05-15-53-09.png](./images/2019-09-05-15-53-09.png)
+![2019-09-05-15-53-20.png](./images/2019-09-05-15-53-20.png)
+
+## 2.2 管道操作
+linux 0.11管道操作的效果是:
+* 读管道进程执行时，如果管道中有未读数据就读数据，没有未读数据就挂起。
+* 写管道执行时，如果管道中有剩余空间，就继续写数据，没有剩余空间，就挂起。
+* 管道只有一个页面，如果读写指针到页面微端，读写指针要回滚到页面首端以便继续操作。
+
+![2019-09-05-16-41-04.png](./images/2019-09-05-16-41-04.png)
+![2019-09-05-16-41-27.png](./images/2019-09-05-16-41-27.png)
+
+在不断回滚操作的前提下，控制写入和读取，以及将进程唤醒和挂起的代码如下。
+![2019-09-06-09-25-20.png](./images/2019-09-06-09-25-20.png)
+![2019-09-06-09-25-41.png](./images/2019-09-06-09-25-41.png)
+
+当管道中所有空间被写满时，写管道指针回滚一圈，与读管道指针差1字节，这时应该把写管道进程挂起。linux 0.11将sys_write()函数设计为写管道进程一次最多只能写4095字节。
+
+### 2.2.1 读管道进程开始操作文件
+假设读管道进程开始执行，此时管道中没有任何数据，执行read()->sys_read()->read_pipe()时会因为管道中没有任何数据被挂起。
+![2019-09-06-09-36-17.png](./images/2019-09-06-09-36-17.png)
+![2019-09-06-09-36-30.png](./images/2019-09-06-09-36-30.png)
+
+### 2.2.2 写管道进程向管道中写数据
+切换到写管道进程中执行，write()->sys_write()->write_pipe(),写完后管道中就有数据可以读出，唤醒读管道进程。
+![2019-09-06-09-39-23.png](./images/2019-09-06-09-39-23.png)
+![2019-09-06-09-39-34.png](./images/2019-09-06-09-39-34.png)
+
 
