--- a/云计算/KubeFlow/KubeBatch/2.kube-batch概念和原理.md
+++ b/云计算/KubeFlow/KubeBatch/2.kube-batch概念和原理.md
@@ -23,6 +23,17 @@
 - [5. Delay Pod Creation](#5-delay-pod-creation)
     - [5.1 Function Detail](#51-function-detail)
         - [5.1.1 State](#511-state)
+        - [5.1.2 Action](#512-action)
+        - [5.1.3 Admission Webhook](#513-admission-webhook)
+    - [5.2 Feature interaction](#52-feature-interaction)
+        - [5.2.1 Queue](#521-queue)
+        - [5.2.2 Quota](#522-quota)
+- [6.Dynamic Plugins Configuration](#6dynamic-plugins-configuration)
+    - [6.1 Function Detail](#61-function-detail)
+    - [6.2 Feature Interaction](#62-feature-interaction)
+        - [6.2.1  ConfigMap](#621--configmap)
+- [7. PodGroup Status Enhancement](#7-podgroup-status-enhancement)
+- [8. monitor kube-batch](#8-monitor-kube-batch)
 
 <!-- /TOC -->
 # 1. 背景
@@ -276,4 +287,67 @@ PreemptableFn:Checks whether a task can be preempted or not, which returns set o
 
 ## 5.1 Function Detail
 ### 5.1.1 State
+* A new state, named InQueue, will be introduced to denote the phase that jobs are ready to be allocated.
+![2019-09-09-21-26-13.png](./images/2019-09-09-21-26-13.png)
+
+### 5.1.2 Action
+* To support InQueue state, a new action, named enqueue, will be introduced.
+* By default, enqueue action will handle PodGroups in FCFS policy; 
+* enqueue will go through all PodGroup (by creation timestamp) and update PodGroup's phase to InQueue if:
+  * there're enough idle resources for spec.minResources of PodGroup
+  * there're enough quota for spec.minResources of PodGroup
+
+* As kube-batch handling PodGroup by spec.minResources, the operator/controller may create more Pods than spec.minResources; in such case, preempt action will be enhanced to evict overused PodGroup to release resources.
+
+### 5.1.3 Admission Webhook
+* To guarantee the transaction of spec.minResources, a new MutatingAdmissionWebhook, named PodGroupMinResources, is introduced.
+* PodGroupMinResources make sure
+  * the summary of all PodGroups' spec.minResources in a namespace not more than Quota
+  * if resources are reserved by spec.minResources, the resources can not be used by others
+
+
+## 5.2 Feature interaction
+### 5.2.1 Queue
+* The resources will be shared between Queues algorithm, e.g. proportion by default. 
+* If the resources can not be fully used because of fragment, backfill action will help on that.
+* If Queue used more resources than its deserved, reclaim action will help to balance resources. 
+* The Pod can not be evicted currently if eviction will break spec.minMember; it'll be enhanced for job level eviction.（只有job level才能被踢出queue，pod level不行） 
+
+### 5.2.2 Quota
+* To delay pod creation, both kube-batch and PodGroupMinResources will watch ResourceQuota to decide which PodGroup should be in queue firstly. 
+
+* The decision maybe invalid because of race condition, e.g. other controllers create Pods. In such case, PodGroupMinResources will reject PodGroup creation and keep InQueue state until kube-batch transform it back to Pending. 
+
+* To avoid race condition, it's better to let kube-batch manage Pod number and resources (e.g. CPU, memory) instead of Quota.（只有调度器管理的单位是resource单元，我们才能确定InQueue转化成pending还是running）
+
+
+# 6.Dynamic Plugins Configuration
+* There are several plugins and actions in kube-batch right now; the users may want to only enable part of plugins and actions. 
+## 6.1 Function Detail
+```
+actions: "list_of_action_in_order"
+tiers:
+- plugins:
+  - name: "plugin_1"
+    disableJobOrder: true
+  - name: "plugin_2"
+- plugins:
+  - name: "plugin_3"
+    disableJobOrder: true
+```
+* The options defines the detail behaviour of each plugins, e.g. whether preemption is enabled. If not specific, true is default value. For now, preemptable, jobOrder, taskOrder are supported.
+
+## 6.2 Feature Interaction
+### 6.2.1  ConfigMap
+kube-batch will read the plugin configuration from command line argument --scheduler-conf; user can use ConfigMap to acesss the volume of kube-batch pod during deployment.(配置信息通过configmap存放)
+
+
+
+# 7. PodGroup Status Enhancement
+* 不属于调度机制重点内容，主要是查看podgroup状态
+* 参考：https://github.com/kubernetes-sigs/kube-batch/blob/master/doc/design/podgroup-status.md
+
+# 8. monitor kube-batch
+* 监控kube-batch,并且还没有实现
+* 参考：https://github.com/kubernetes-sigs/kube-batch/blob/master/doc/design/metrics.md
 
