--- a/云计算/KubeFlow/基础知识/重要单词解释.md
+++ b/云计算/KubeFlow/基础知识/重要单词解释.md
@@ -1,2 +1,2 @@
-* DRF:dominant  resource fairness .在kube-batch中经常出现。
+* DRF:dominant  resource fairness .在kube-batch中经常出现。https://github.com/kubernetes-sigs/kube-batch/blob/master/doc/design/plugin/drf.md
 
