--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -3,6 +3,8 @@
 - [1. 元函数和type_traits](#1-元函数和type_traits)
     - [1.1 元函数介绍](#11-元函数介绍)
     - [1.2 类型元函数](#12-类型元函数)
+        - [1.2.1 C++ 11中定义类型的元函数](#121-c-11中定义类型的元函数)
+        - [1.2.2 C++14 中定义元函数](#122-c14-中定义元函数)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -28,3 +30,17 @@ constexpr int fun2(int a){
 }
 ```
 ## 1.2 类型元函数
+* 1.1 中类型确定是int，我们完全可以借助模板进行泛化
+* 什么是函数？作者认为有输入输出就是函数，不是程序中的函数。满足函数形式又不属于程序中的函数，作就直接定义这种为元函数
+
+### 1.2.1 C++ 11中定义类型的元函数
+* 这样完全满足元函数要求，和C++ 11中定义了元函数std::enable_if一样
+* 但是这种方式是使用不是很灵活
+```
+struct Fun_
+{
+    using type=T;
+};
+Fun_<int>::type h=3;
+```
+### 1.2.2 C++14 中定义元函数
