--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -5,6 +5,7 @@
     - [1.2 类型元函数](#12-类型元函数)
         - [1.2.1 C++ 11中定义类型的元函数](#121-c-11中定义类型的元函数)
         - [1.2.2 C++14 中定义元函数](#122-c14-中定义元函数)
+    - [1.3 type_traits](#13-type_traits)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -44,3 +45,18 @@ struct Fun_
 Fun_<int>::type h=3;
 ```
 ### 1.2.2 C++14 中定义元函数
+```
+struct Fun_
+{
+    using type=T;
+};
+
+//这里可以定义所有的类型
+template<typename T>
+using Fun=typename Fun_<T>::type;
+
+Fun<int> h=3;
+
+```
+
+## 1.3 type_traits
