--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -59,4 +59,20 @@ Fun<int> h=3;
 
 ```
 
-## 1.3 type_traits
+### 1.2.3 type_traits
+* type_traits 是有boost引入的，实现功能是类型转化
+* eg:
+    * 下面两个都是将int&自动转化成int(根据赋值)
+    * 只是形式上区别，类似前面Fun_和Fun区别
+```
+std::remove_reference<int&>::type h1=3;
+std::remove_reference_t<int&>::type h1=3;
+```
+
+### 1.2.4 元函数和宏
+* 宏也是一种元函数，但是C++中使用宏很少，因为宏是预处理器解析而不是编译器解析，不支持语法检查等众多特性
+* 但是宏也有自身的优势，但是使用的过程中一定要小心
+
+## 1.3 模板型模板参数与容器模板
+### 1.3.1 模板作为元函数输入
+* 元函数可以操作数值类型有三类：数值、类型、模板
