--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -6,6 +6,10 @@
         - [1.2.1 C++ 11中定义类型的元函数](#121-c-11中定义类型的元函数)
         - [1.2.2 C++14 中定义元函数](#122-c14-中定义元函数)
     - [1.3 type_traits](#13-type_traits)
+    - [1.4 元函数和宏](#14-元函数和宏)
+- [2 模板型模板参数与容器模板](#2-模板型模板参数与容器模板)
+    - [2.1 模板作为元函数输入](#21-模板作为元函数输入)
+    - [2.2](#22)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -59,7 +63,7 @@ Fun<int> h=3;
 
 ```
 
-### 1.2.3 type_traits
+## 1.3 type_traits
 * type_traits 是有boost引入的，实现功能是类型转化
 * eg:
     * 下面两个都是将int&自动转化成int(根据赋值)
@@ -69,10 +73,28 @@ std::remove_reference<int&>::type h1=3;
 std::remove_reference_t<int&>::type h1=3;
 ```
 
-### 1.2.4 元函数和宏
+## 1.4 元函数和宏
 * 宏也是一种元函数，但是C++中使用宏很少，因为宏是预处理器解析而不是编译器解析，不支持语法检查等众多特性
 * 但是宏也有自身的优势，但是使用的过程中一定要小心
 
-## 1.3 模板型模板参数与容器模板
-### 1.3.1 模板作为元函数输入
-* 元函数可以操作数值类型有三类：数值、类型、模板
+# 2 模板型模板参数与容器模板
+## 2.1 模板作为元函数输入
+* 元函数可以操作数值类型有三类：数值、类型、模板,前两种上面讲过，下面例子是模板作为参数
+    * 将template <typename> class T1 作为一种参数类型就可以，class说明是类模板。上面的typename 都可以进行互换。
+    * typename 可以简单理解成重新定义一种类型
+    * 模板支持函数模板和类模板，但是下面模板定义的是struct，我想这时因为C++中struct和class非常接近，所以本质上还是模板类
+```
+template <template <typename> class T1,typename T2>
+struct Fun_
+{
+    using type=typename T1<T2>::type;
+    /* data */
+};
+
+template <template <typename> class T1,typename T2>
+using Fun=typename Fun_<T1,T2>::type;
+
+Fun<std::remove_reference,int&> h=3;
+```
+
+## 2.2
