--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -9,7 +9,7 @@
     - [1.4 元函数和宏](#14-元函数和宏)
 - [2 模板型模板参数与容器模板](#2-模板型模板参数与容器模板)
     - [2.1 模板作为元函数输入](#21-模板作为元函数输入)
-    - [2.2](#22)
+    - [2.2 模板作为元函数输出](#22-模板作为元函数输出)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -42,6 +42,7 @@ constexpr int fun2(int a){
 * 这样完全满足元函数要求，和C++ 11中定义了元函数std::enable_if一样
 * 但是这种方式是使用不是很灵活
 ```
+template<typename T>
 struct Fun_
 {
     using type=T;
@@ -50,6 +51,7 @@ Fun_<int>::type h=3;
 ```
 ### 1.2.2 C++14 中定义元函数
 ```
+template<typename T>
 struct Fun_
 {
     using type=T;
