--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -10,6 +10,9 @@
 - [2 模板型模板参数与容器模板](#2-模板型模板参数与容器模板)
     - [2.1 模板作为元函数输入](#21-模板作为元函数输入)
     - [2.2 模板作为元函数输出](#22-模板作为元函数输出)
+    - [2.3 容器模板](#23-容器模板)
+- [3. 顺序、分支、循环代码编写](#3-顺序分支循环代码编写)
+    - [3.1 顺序执行的代码](#31-顺序执行的代码)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -100,3 +103,55 @@ Fun<std::remove_reference,int&> h=3;
 ```
 
 ## 2.2 模板作为元函数输出
+
+* eg:
+    * 通过模板实现逻辑判断过程
+```
+template <bool AddorRemove> class Fun_;
+
+template<>
+struct Fun_<true>{
+    template<typename T>
+    using type=std::add_lvalue_reference<T>;
+};
+
+template<>
+struct Fun_<false>{
+    template<typename T>
+    using type=std::remove_reference<T>;
+};
+
+
+template<typename T>
+template<bool AddorRemove>
+using Fun=typename Fun_<AddorRemove>::template type<T>;
+
+template<typename T>
+using Res_=Fun<false>;
+
+Res_<int&>::type h=3;
+```
+
+## 2.3 容器模板
+* 前面讨论的都是单个元素作为元函数的输入类型。类型包括数值、类型、模板。
+* 这里讨论单个输入类型变成数组，数组类型也包括数值、类型、模板
+* MPL库对这些进行了封装，功能类似STL。但这里不进行讲述。
+
+* 本质上讲，我们并非要求的是一种数组形式，而是一种容器形式。
+
+* eg:
+    * c++ 11中引入变长模板，能很好的达到我们的要求
+    * 1,2,3 分别是int数值、bool数值、类型容器。第4个容器中存放的是模板。第5个容器中存放的是模板，但是每个模板存放多个类型信息。
+    * 下面都只是声明，生变已经包含编译器所需要的全部信息。这也是元编程特点，只有必须要写定义的时候才写定义。
+```
+template<int... vals> struct IntContainer;
+template<bool... vals> struct BoolContainer;
+template<typename... Vals> struct TypeContainer;
+template<template <typename> class... T> struct TemplateContainer;
+tempalte<template <typename...> class... T> struct TemplateContainer2;
+```
+
+# 3. 顺序、分支、循环代码编写
+* 前面讲解的是元编程的数据结构，后面讲述的是算法。
+
+## 3.1 顺序执行的代码
