--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -155,3 +155,21 @@ tempalte<template <typename...> class... T> struct TemplateContainer2;
 * 前面讲解的是元编程的数据结构，后面讲述的是算法。
 
 ## 3.1 顺序执行的代码
+* 一定要注意inter_type和type之间的顺序，如果错了编译会出现错误
+```
+template <typename T>
+struct RemoveReferenceConst_
+{
+    private:
+        using inter_type=typename std::remove_reference<T>::type;
+    public:
+        using type=typename std::remove_const<inter_type>::type;
+};
+
+template<typename T>
+using RemoveReferenceConst=typename RemoveReferenceConst_<T>::type;
+
+RemoveReferenceConst<const int&> h=3;
+```
+
+## 3.2 分支执行代码
