--- a/常用语言/C++/C++ 模板元编程实战/重要基础知识.md
+++ b/常用语言/C++/C++ 模板元编程实战/重要基础知识.md
@@ -66,6 +66,27 @@ public:
 
 * 同样的，对于基类中的成员函数test1()，在private继承后变为private，T5Derived的对象同样无法访问，通过using T5Base::test1 就可以使用了。
 
- 
 
 * 注意，using只是引用，不参与形参的指定。
+
+## 2.3 别名指定(元编程中最常看到的)
+* using value_type = _Ty
+* value_type value就代表_Ty value
+
+### 2.3.1 那么using和typename又有什么却别呢
+#### 2.3.1.1 可读性更好
+* 一下子针对看不出来FP是一个别名，代表的是函数指针
+```
+typedef void (*FP) (int, const std::string&);
+```
+* using 将FP左右两端分离
+```
+using FP = void (*) (int, const std::string&);
+```
+
+#### 2.3.1.2 指定模板别名（这个非常重要）
+* 只有using才能指定模板别名
+```
+template <typename T>
+using Vec = MyVector<T, MyAlloc<T>>;
+```
