--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -13,6 +13,8 @@
     - [2.3 容器模板](#23-容器模板)
 - [3. 顺序、分支、循环代码编写](#3-顺序分支循环代码编写)
     - [3.1 顺序执行的代码](#31-顺序执行的代码)
+    - [3.2 分支执行代码](#32-分支执行代码)
+        - [3.2.1 使用std::conditional和std::conditional_t实现分支](#321-使用stdconditional和stdconditional_t实现分支)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -173,3 +175,29 @@ RemoveReferenceConst<const int&> h=3;
 ```
 
 ## 3.2 分支执行代码
+* 前面其实我们已经讲述过一个分支例子AddorRemove元函数。元函数有很多类型的分支代码，每种都各自有优缺点。
+
+### 3.2.1 使用std::conditional和std::conditional_t实现分支
+* std namespace 使用类似如下代码实现conditional和conditional_t
+```
+template <bool B,typename T,typename F>
+class conditional_test
+{   public:
+        using type=T;
+};
+
+template<typename T,typename F>
+struct conditional_test<false,T,F>
+{   public:
+        using type=F;
+};
+
+template<bool B,typename T,typename F>
+using conditional_test_t=typename conditional_test<B,T,F>::type;
+
+conditional_test_t<true,int,float> h=4;
+```
+* 我们可以直接使用如下代码
+```
+std::conditional_t<true,int,float> h=4;
+```
