--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -15,6 +15,10 @@
     - [3.1 顺序执行的代码](#31-顺序执行的代码)
     - [3.2 分支执行代码](#32-分支执行代码)
         - [3.2.1 使用std::conditional和std::conditional_t实现分支](#321-使用stdconditional和stdconditional_t实现分支)
+            - [3.2.1.1 优缺点](#3211-优缺点)
+        - [3.2.2 使用部分特化实现分支](#322-使用部分特化实现分支)
+                - [3.2.2.1 手工实现特化](#3221-手工实现特化)
+                - [3.2.2.2 C++ 14 中简化特化过程](#3222-c-14-中简化特化过程)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -178,6 +182,7 @@ RemoveReferenceConst<const int&> h=3;
 * 前面其实我们已经讲述过一个分支例子AddorRemove元函数。元函数有很多类型的分支代码，每种都各自有优缺点。
 
 ### 3.2.1 使用std::conditional和std::conditional_t实现分支
+
 * std namespace 使用类似如下代码实现conditional和conditional_t
 ```
 template <bool B,typename T,typename F>
@@ -200,4 +205,60 @@ conditional_test_t<true,int,float> h=4;
 * 我们可以直接使用如下代码
 ```
 std::conditional_t<true,int,float> h=4;
+```
+
+#### 3.2.1.1 优缺点
+* 有点是实现简单
+* 缺点是不好实现switch功能
+
+### 3.2.2 使用部分特化实现分支
+* 特化是天然引入差异的
+
+##### 3.2.2.1 手工实现特化
+* 有点事代码逻辑简单，但是代码长
+```
+struct A;
+struct B;
+
+template<typename T>
+struct Fun
+{
+    constexpr static size_t value=0;
+};
+
+template<>
+struct Fun<A>
+{
+    constexpr static size_t value=1;
+};
+
+template<>
+struct Fun<B>
+{
+    constexpr static size_t value=2;
+};
+
+constexpr size_t h=Fun<A>::value;
+```
+##### 3.2.2.2 C++ 14 中简化特化过程
+* note:第一次语法因为空格出现错误，为什么？
+```
+struct A;
+struct B;
+
+template<typename T>
+constexpr size_t Fun=0;
+
+// parse error in template argument list constexpr size_t Fun<A>=1;
+// template<>
+// constexpr size_t Fun<A>=1;
+
+
+template<>
+constexpr size_t Fun<A> = 1;
+
+template<>
+constexpr size_t Fun<B> = 2;
+
+size_t h=Fun<B>;
 ```
