--- Auto-Git Commit ---

--- a/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/常用语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -19,6 +19,7 @@
         - [3.2.2 使用部分特化实现分支](#322-使用部分特化实现分支)
                 - [3.2.2.1 手工实现特化](#3221-手工实现特化)
                 - [3.2.2.2 C++ 14 中简化特化过程](#3222-c-14-中简化特化过程)
+            - [3.2.2.3 非完全特化类模板引入完全特化的分支代码是非法的](#3223-非完全特化类模板引入完全特化的分支代码是非法的)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -261,4 +262,44 @@ template<>
 constexpr size_t Fun<B> = 2;
 
 size_t h=Fun<B>;
+```
+
+#### 3.2.2.3 非完全特化类模板引入完全特化的分支代码是非法的
+* 下面代码是非法的，因为wrapper是一个未完全特化模板，但是确包含了一个完全特化模板，这是C++标准不允许的，会产生编译错误
+```
+template <typename TW>
+struct Wrapper{
+    template <typename T>
+    struct Fun_{
+        constexpr static size_t value=0;
+    };
+
+    template<> 
+    struct Fun_<int>{
+        constexpr static size_t value=1;
+    }
+    
+```
+
+* 解决方法是添加无关参数，将完全特化转化成非完全特化
+```
+template <typename TW>
+struct Wrapper{
+    template <typename T,typename TD>
+    struct Fun_{
+        constexpr static size_t value=0;
+    };
+
+    template<typename TD> 
+    struct Fun_<int,TD>{
+        constexpr static size_t value=1;
+    };
+    
+};
+
+template<typename T,typename TD>
+using Fun=typename Wrapper<int>::Fun_<T,TD>;
+
+size_t h=Fun<int,int>::value;
+
 ```
