--- Auto-Git Commit ---

--- a/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -303,3 +303,5 @@ using Fun=typename Wrapper<int>::Fun_<T,TD>;
 size_t h=Fun<int,int>::value;
 
 ```
+
+#### 3.2.2.4 使用std::enable_if 与 std:enable_if_t 实现分支
