--- a/编程语言/C++/C++ 模板元编程实战/重要基础知识.md
+++ b/编程语言/C++/C++ 模板元编程实战/重要基础知识.md
@@ -1,3 +1,21 @@
+<!-- TOC -->
+
+- [1.typedef typename 作用](#1typedef-typename-作用)
+    - [1.1 vector::size_type](#11-vectorsize_type)
+    - [1.2 为什么使用typename关键字](#12-为什么使用typename关键字)
+- [2. using](#2-using)
+    - [2.1 命名空间下使用](#21-命名空间下使用)
+    - [2.1 在子类空间中应用基类成员](#21-在子类空间中应用基类成员)
+    - [2.3 别名指定(元编程中最常看到的)](#23-别名指定元编程中最常看到的)
+        - [2.3.1 那么using和typename又有什么却别呢](#231-那么using和typename又有什么却别呢)
+            - [2.3.1.1 可读性更好](#2311-可读性更好)
+            - [2.3.1.2 指定模板别名（这个非常重要）](#2312-指定模板别名这个非常重要)
+- [3. auto 用法](#3-auto-用法)
+    - [3.1 自动类型推断](#31-自动类型推断)
+        - [3.1.1 这种类型对模板还是很有作用的](#311-这种类型对模板还是很有作用的)
+    - [3.2 返回值占位](#32-返回值占位)
+
+<!-- /TOC -->
 # 1.typedef typename 作用
 * eg:
     * 虽然知道这句话大致意思，但是并不是很清楚什么时候用typename
@@ -89,4 +107,37 @@ using FP = void (*) (int, const std::string&);
 ```
 template <typename T>
 using Vec = MyVector<T, MyAlloc<T>>;
+```
+
+
+# 3. auto 用法
+auto两种用法，自动类型推断和返回值占位。
+
+## 3.1 自动类型推断
+* 定义变量一定要进行初始化
+* 模板参数不能被声明为auto
+```
+	auto a = 10;
+	auto c = 'A';
+	auto s("hello");
+```
+### 3.1.1 这种类型对模板还是很有作用的
+使用模板技术时，如果某个变量的类型依赖于模板参数，不使用auto将很难确定变量的类型（使用auto后，将由编译器自动进行确定）。
+```
+// 不使用auto将很难确定变量的类型（使用auto后，将由编译器自动进行确定）。
+template <class T, class U>
+void Multiply(T t, U u)
+{
+    auto v = t * u;
+}
+```
+
+## 3.2 返回值占位
+```
+template <typename T1, typename T2>
+auto compose(T1 t1, T2 t2) -> decltype(t1 + t2)
+{
+   return t1+t2;
+}
+auto v = compose(2, 3.14); // v's type is double
 ```
