--- Auto-Git Commit ---

--- a/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -20,6 +20,9 @@
                 - [3.2.2.1 手工实现特化](#3221-手工实现特化)
                 - [3.2.2.2 C++ 14 中简化特化过程](#3222-c-14-中简化特化过程)
             - [3.2.2.3 非完全特化类模板引入完全特化的分支代码是非法的](#3223-非完全特化类模板引入完全特化的分支代码是非法的)
+            - [3.2.2.4 使用std::enable_if 与 std:enable_if_t 实现分支（重要）](#3224-使用stdenable_if-与-stdenable_if_t-实现分支重要)
+                - [3.2.2.5 if constexpr 简化代码（重要）](#3225-if-constexpr-简化代码重要)
+    - [3.3 循环执行代码](#33-循环执行代码)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -304,4 +307,60 @@ size_t h=Fun<int,int>::value;
 
 ```
 
-#### 3.2.2.4 使用std::enable_if 与 std:enable_if_t 实现分支
+#### 3.2.2.4 使用std::enable_if 与 std:enable_if_t 实现分支（重要）
+* enable_if和enable_if_t实现如下
+```
+template <bool, typename T=void>
+struct enable_if {
+};
+
+template <typename T>
+struct enable_if<true, T> {
+  using type = T;
+};
+template <bool B,class T = void>
+using enable_if_t=typename enable_if<B,T>::type;
+```
+
+* 使用如下
+```
+template <bool IsFeedBackOut,typename T,std::enable_if_t<IsFeedBackOut>* =nullptr>
+auto FeedBackOut_(){
+    return 1;
+}
+
+template<bool IsFeedBackOut,typename T,std::enable_if_t<!IsFeedBackOut>* =nullptr>
+auto FeedBackOut_(){
+    return 2;
+}
+
+auto h=FeedBackOut_<false,int>();
+```
+
+C++中有一个特性，SFINAE（substitution Failure is not a error）,一个函数匹配失败，另外一个函数匹配成功，编译器会选择匹配成功的函数而不会报错。
+
+通常函数重载通过参数不同来匹配。但是有些时候，我们需要使用同名函数，这时候可以使用enable_if_t来解决部分问题。
+
+##### 3.2.2.5 if constexpr 简化代码（重要）
+优点:
+* 代码逻辑结构和运行期间的逻辑结构非常一致
+* 编译实例化过程产生的代码比前面少很多
+
+缺点：
+* 如果忘记编写constexpr，编译任然会通过，但是逻辑选择任然是在运行期间进行判断，并没有达到优化的目的。
+* if constexpr 应用场景会比较窄，他一般放在函数内部，用于编译选择执行的代码，不能通过分支返回不同类型的数据
+C++ 17 可以将代码简化为如下表达式
+```
+template <bool check>
+auto fun(){
+    if constexpr(check){
+        return 1;
+    }else{
+        return 0;
+    }
+}
+
+auto h=fun<false>();
+```
+
+## 3.3 循环执行代码
