--- Auto-Git Commit ---

--- a/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -364,3 +364,17 @@ auto h=fun<false>();
 ```
 
 ## 3.3 循环执行代码
+编译期间我们不能操作变量进程for while循环，我们能操作只是常量、类型、模板。要实现编译期间的循环，我们通常实用递归的方式实现循环。
+
+```
+template<size_t input>
+constexpr size_t OneCount=input%2+OneCount<input/2>;
+
+template<>
+constexpr size_t OneCount<0> = 0;
+
+size_t h=OneCount<45>;
+```
+
+* 循环操作数组
+
