--- a/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -377,4 +377,30 @@ size_t h=OneCount<45>;
 ```
 
 * 循环操作数组
+```
 
+template <size_t... inputs>
+constexpr size_t SumArray = 0;
+
+template<size_t curr,size_t... inputs>
+constexpr size_t SumArray<curr,inputs...> = curr + SumArray<inputs...>;
+
+constexpr size_t  h = SumArray<1,2,3,4>;
+```
+
+# 4. 实例化和编译爆炸
+* 下面是之前写的一个例子，OneCount<7>递归产生的中间结果保存，会被OneCount<15>实用，这会很大的提升编译速度，但是对元编程来说，可能会造成灾难。
+```
+template<size_t input>
+constexpr size_t OneCount=input%2+OneCount<input/2>;
+
+template<>
+constexpr size_t OneCount<0> = 0;
+
+size_t h=OneCount<7>;
+size_t h=OneCount<15>
+```
+
+* 如下代码编译的中间结果因为名称不一样，导致中间结果不能重用。如果递归非常深，中间结果都会保存在内存中，可能会导致编译崩溃。
+    * 保存中间结果是编译器的问题，我们不能从根本上解决问题，只能尽量的重用优化
+    
