--- Auto-Git Commit ---

--- a/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
+++ b/编程语言/C++/C++ 模板元编程实战/2. 基本技巧.md
@@ -23,6 +23,7 @@
             - [3.2.2.4 使用std::enable_if 与 std:enable_if_t 实现分支（重要）](#3224-使用stdenable_if-与-stdenable_if_t-实现分支重要)
                 - [3.2.2.5 if constexpr 简化代码（重要）](#3225-if-constexpr-简化代码重要)
     - [3.3 循环执行代码](#33-循环执行代码)
+- [4. 实例化和编译爆炸](#4-实例化和编译爆炸)
 
 <!-- /TOC -->
 # 1. 元函数和type_traits
@@ -403,4 +404,45 @@ size_t h=OneCount<15>
 
 * 如下代码编译的中间结果因为名称不一样，导致中间结果不能重用。如果递归非常深，中间结果都会保存在内存中，可能会导致编译崩溃。
     * 保存中间结果是编译器的问题，我们不能从根本上解决问题，只能尽量的重用优化
-    
+```
+template <size_t A>
+struct Wrap_{
+    template <size_t ID,typename TDummy=void>
+    struct imp{
+        constexpr static size_t value = ID + imp<ID-1>::value;
+    };
+
+    template<typename TDummy>
+    struct imp<0,TDummy>{
+        constexpr static size_t value=0;
+    };
+
+    template <size_t ID>
+    constexpr static size_t value=imp<A+ID>::value;
+};
+
+size_t h=Wrap_<3>::value<2>;
+size_t h1=Wrap_<10>::value<2>;
+```
+
+* 优化方法很简单，就是将上面的template拆开，使之可以重用
+```
+template <size_t ID,typename TDummy=void>
+struct imp{
+    constexpr static size_t value = ID + imp<ID-1>::value;
+};
+
+template<typename TDummy>
+struct imp<0,TDummy>{
+    constexpr static size_t value=0;
+};
+
+template <size_t A>
+struct Wrap_{
+    template <size_t ID>
+    constexpr static size_t value=imp<A+ID>::value;
+};
+
+size_t h=Wrap_<3>::value<2>;
+size_t h1=Wrap_<10>::value<2>;
+```
