--- Auto-Git Commit ---

--- a/云计算/虚拟化/1. 虚拟化简介.md
+++ b/云计算/虚拟化/1. 虚拟化简介.md
@@ -1,6 +1,15 @@
 <!-- TOC -->
 
 - [1. 背景](#1-背景)
+- [2. 虚拟化类型](#2-虚拟化类型)
+    - [2.1 计算虚拟化（服务器虚拟化）](#21-计算虚拟化服务器虚拟化)
+        - [2.1.1 如何实现服务器虚拟化](#211-如何实现服务器虚拟化)
+    - [2.2 存储虚拟化](#22-存储虚拟化)
+    - [2.3 网络虚拟化](#23-网络虚拟化)
+    - [2.3 其它虚拟化](#23-其它虚拟化)
+- [3. 全虚拟化和半虚拟化](#3-全虚拟化和半虚拟化)
+    - [3.1 全虚拟化](#31-全虚拟化)
+        - [3.1.1 软件实现全虚拟化](#311-软件实现全虚拟化)
 
 <!-- /TOC -->
 # 1. 背景
@@ -8,4 +17,44 @@
     * 系统资源隔离
     * 物理server资源多，很多服务不需要这么多资源，可以使用vm将资源隔离
     * 弹性扩展vm资源配置
+
+# 2. 虚拟化类型
+计算机资源分为三种：计算、存储、网络。
+## 2.1 计算虚拟化（服务器虚拟化）
+物理机缺点(成本高。资源利用率高)
+* 普通物理机内存平均利用率也就20%-30%
+* 物理机独占空间
+* 资源固定
+
+### 2.1.1 如何实现服务器虚拟化
+简单来说，就是计算机硬件和操作系统之间多了一个层hypervisor，把操作系统和硬件的逻辑依赖关系隔离。操作系统和hypervisor通信，hypervisor和硬件通信。
+
+* 操作系统对hypervisor来说就是一个文件，因此可以跑多个操作系统
+* 对硬件来说，hypervisor就是一个操作系统。
+* 这样主机操作系统就从管硬件管应用中解脱出来，变成只管应用接口。
+
+既然虚拟操作系统是一个文件，那么完全可以将虚拟机放在一个文件服务器中，这样就可以如果一台机器宕机，可以将操作系统文件在另外一个机器恢复，这样就在系统层面实现HA，不需要软件。
+如果硬件需要升级，可以将操作系统文件迁移到其它系统，这样就实现系统级别迁移。
+
+## 2.2 存储虚拟化
+* 基本上不用，企业都是购买一个企业的存储管理系统。
+
+## 2.3 网络虚拟化
+网络虚拟化用了很多年了，网络中加V的都是网络虚拟化。
+
+## 2.3 其它虚拟化
+还有针对具体资源的虚拟化，比如CPU、GPU等等，虚拟化是一类非常泛的概念。
+
+
+# 3. 全虚拟化和半虚拟化
+## 3.1 全虚拟化
+不需要对GuestOS操作系统软件的源代码做任何的修改，就可以运行在这样的VMM中。
+* 在全虚拟化的虚拟平台中，GuestOS并不知道自己是一台虚拟机，它会认为自己就是运行在计算机物理硬件设备上的HostOS。
+* 因为全虚拟化的VMM！！！会将一个OS所能够操作的CPU、内存、外设等物理设备逻辑抽象成为虚拟CPU、虚拟内存、虚拟外设等虚拟设备后，再交由GuestOS来操作使用。这样的GuestOS会将底层硬件平台视为自己所有的，但是实际上，这些都是VMM为GuestOS制造了这种假象。
+* 全虚拟化又分为：软件辅助的全虚拟化 & 硬件辅助的全虚拟化。
+
+### 3.1.1 软件实现全虚拟化
+
+
+
 
