--- Auto-Git Commit ---

--- a/云计算/虚拟化/2.虚拟机在线迁移技术实现.md
+++ b/云计算/虚拟化/2.虚拟机在线迁移技术实现.md
@@ -6,8 +6,10 @@
 
 <!-- /TOC -->
 # 1. 简介
-虚拟机不停机在线迁移技术的重要性不言而喻。
+虚拟机不停机在线迁移技术的重要性不言而喻。下面描述的方案也非常经典。
 * 难点：在迁移过程中，如果保证新增数据同步。
+    * 实现过程设置一个最大暂停时间（类似暂停系统，避免产生脏数据），在迁移过程中，一边迁移一遍计算迁移剩下的脏数据所需要的时间是否小于上面的最大暂停时间，如果发现条件成立，就暂停原vm系统，执行迁移数据。
+* 难点：IP如何实现迁移。非常经典，直接在交换机上，跟换IP的mac地址为目标mac地址。
 ## 1.1 在线迁移的技术场景
 图中描述的非常清楚，也很重要。
 
